## Process this file with automake to produce Makefile.in -*-Makefile-*-
AUTOMAKE_OPTIONS = foreign 1.7

SUBDIRS = gdtest \
		freetype \
		gd \
		gd2 \
		gdimagearc \
		gdimagecolorclosest \
		gdimagecolordeallocate \
		gdimagecolorexact \
		gdimagecolorresolve \
		gdimagecolortransparent \
		gdimagecopy \
		gdimagecopyrotated \
		gdimagefill \
		gdimagefilledellipse \
		gdimagefilledpolygon \
		gdimagefilledrectangle \
		gdimagefilltoborder \
		gdimageline \
		gdimageopenpolygon \
		gdimagepolygon \
		gdimagerectangle \
		gdimagesetpixel \
		gdimagestringft \
		gdimagestringftex \
		gdnewfilectx \
		gdtiled \
		gif \
		jpeg \
		png \
		wbmp \
		xpm

EXTRA_DIST = CMakeLists.txt

