## Process this file with automake to produce Makefile.in -*-Makefile-*-

EXTRA_DIST = CMakeLists.txt \
	gdimagefilledpolygon0.c \
	gdimagefilledpolygon0.png \
	gdimagefilledpolygon1.c \
	gdimagefilledpolygon1.png \
	gdimagefilledpolygon2.c \
	gdimagefilledpolygon2.png \
	gdimagefilledpolygon3.c \
	gdimagefilledpolygon3.png \
	bug00100.c \
	bug00100.png
