## Process this file with automake to produce Makefile.in -*-Makefile-*-

EXTRA_DIST = CMakeLists.txt \
	gdimageopenpolygon0.c \
	gdimageopenpolygon0.png \
	gdimageopenpolygon1.c \
	gdimageopenpolygon1.png \
	gdimageopenpolygon2.c \
	gdimageopenpolygon2.png \
	gdimageopenpolygon3.c \
	gdimageopenpolygon3.png
