## Process this file with automake to produce Makefile.in -*-Makefile-*-
AUTOMAKE_OPTIONS = foreign 1.7

EXTRA_DIST = AC_HEADER_STDC.cmake FindGD.cmake FindXPM.cmake TestForHighBitCharacters.c CheckDIRSymbolExists.cmake FindFontconfig.cmake FindPNG.cmake gd.cmake TestForHighBitCharacters.cmake CheckPrototypeExists.cmake FindFreetype.cmake FindPTHREAD.cmake TestForStandardHeaderwait.cmake
