## Process this file with automake to produce Makefile.in -*-Makefile-*-
AUTOMAKE_OPTIONS = foreign 1.7

EXTRA_DIST = CMakeLists.txt bug00072.c bug00077_exp.png gdimageline_aa_a_1_exp.png gdimageline_aa.c gdimageline_aa_d_0_exp.png bug00072_exp.png bug00111.c gdimageline_aa_b_0_exp.png gdimageline_aa_c_0_exp.png gdimageline_aa_d_1_exp.png bug00077.c bug00111_exp.png gdimageline_aa_a_0_exp.png gdimageline_aa_b_1_exp.png gdimageline_aa_c_1_exp.png gdimageline_aa_outofrange.c
