## Process this file with automake to produce Makefile.in -*-Makefile-*-

EXTRA_DIST = CMakeLists.txt gif_im2im.c gif_null.c bug00005_0.gif bug00005_2.c bug00005_2.gif bug00005.c bug00060.c bug00066.c bug00066.gif bug00005_1.gif  bug00005_2_exp.png  bug00005_3.gif  bug00006.c  bug00060.gif  bug00066_exp.png bug00181.c bug00227.c
